k8/whoami-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: k8.jameselgar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: http
